[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["Rishat Sharafiev <rishatsharafiev@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
pydantic = {extras = ["email"], version = "^1.6.1"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
isort = "^5.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
